# calc-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  TODO.md
.cargo/: config.toml
.github/workflows/: ci.yml
calclib/: Cargo.toml  README.md
calclib/benches/: calc.rs
calclib/doc/: calc.md
calclib/examples/: calculator.rs
calclib/src/: calc.rs  lib.rs
calclib/tests/: add_sub.rs
calcserver/: Cargo.toml  README.md
calcserver/examples/: calcclient.py
calcserver/src/: common.rs  error.rs  main.rs
calcserver/src/routes/calc/: add.rs  mod.rs  result.rs  sub.rs
java/: JavaCalcTest.java  Makefile  README.md
java/javacalclib/: Cargo.toml
java/javacalclib/src/: lib.rs
pycalclib/: Cargo.toml  MANIFEST.in  README.md  build_wheels.py  pyproject.toml
pycalclib/examples/: calculator.py
pycalclib/src/: calc.rs  lib.rs
pycalclib/tests/: test_calc.py
wasmcalc/: Cargo.toml  LICENSE_MIT  README.md  package-lock.json
wasmcalc/src/: calc.rs  lib.rs
