[package]
name = "calcserver"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
actix-web = { version = "4.5", features = ["compress-zstd"] }
actix-multipart = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
fs_extra = "1.3"
derive_more = "0.99"
calclib = { path = "../calclib" }
