[package]
name = "pycalclib_rs"
version = "0.1.0"
authors = ["Martin Bammer <mrbm74@gmail.com>"]
description = "A simple example"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/brmmm3/calc-rs"
homepage = "https://github.com/brmmm3/calc-rs"
readme = "README.md"
keywords = ["simple"]
include = [
    "Cargo.toml",
    "pyproject.toml",
    "src/*",
    "test/*.py",
    "README.md",
    "CHANGELOG.md",
    "LICENSE",
]

[lib]
name = "pycalclib_rs"
crate-type = ["cdylib"]

[dependencies]
calclib = { path = "../calclib", version = "0.1.0" }

[dependencies.pyo3]
version = "0.21"
features = ["extension-module"]
