[package]
name = "wasmcalc"
version = "0.1.0"
authors = ["Martin Bammer <mrbm74@gmail.com>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
cfg-if = "1.0"
wasm-bindgen = "0.2"
calclib = { path = "../calclib" }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[dependencies.web-sys]
version = "0.3"
features = ["console"]

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
